--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,21 @@
 @font-face {
   font-family: "Poppins-Regular";
-  src: url("/public//fonts/Poppins-Regular.ttf");
+  src: url("/fonts/Poppins-Regular.ttf");
 }
 
 @font-face {
   font-family: "Poppins-Medium";
-  src: url("/public//fonts/Poppins-Medium.ttf");
+  src: url("/fonts/Poppins-Medium.ttf");
 }
 
 @font-face {
   font-family: "Poppins-SemiBold";
-  src: url("/public//fonts/Poppins-SemiBold.ttf");
+  src: url("/fonts/Poppins-SemiBold.ttf");
 }
 
 @font-face {
   font-family: "Poppins-Bold";
-  src: url("/public//fonts/Poppins-Bold.ttf");
+  src: url("/fonts/Poppins-Bold.ttf");
 }
 
 @import "tailwindcss";
